// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromPandoc respects the useSmartQuotes config option when transforming Quoted elements 1`] = `
Array [
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "Quoted nodes are a",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "“",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "good idea",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "”",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "!!!",
    "type": "text",
  },
]
`;

exports[`fromPandoc transforms Math (mathType=DisplayMath) into a block_equation 1`] = `
Array [
  Object {
    "attrs": Object {
      "html": "<span class=\\"katex-display\\"><span class=\\"katex\\"><span class=\\"katex-mathml\\"><math xmlns=\\"http://www.w3.org/1998/Math/MathML\\"><semantics><mrow><msup><mi>e</mi><mrow><mi>i</mi><mi>π</mi></mrow></msup><mo>=</mo><mo>−</mo><mn>1</mn></mrow><annotation encoding=\\"application/x-tex\\">e^{i\\\\pi} = -1</annotation></semantics></math></span><span class=\\"katex-html\\" aria-hidden=\\"true\\"><span class=\\"base\\"><span class=\\"strut\\" style=\\"height:0.8746639999999999em;vertical-align:0em;\\"></span><span class=\\"mord\\"><span class=\\"mord mathdefault\\">e</span><span class=\\"msupsub\\"><span class=\\"vlist-t\\"><span class=\\"vlist-r\\"><span class=\\"vlist\\" style=\\"height:0.8746639999999999em;\\"><span style=\\"top:-3.113em;margin-right:0.05em;\\"><span class=\\"pstrut\\" style=\\"height:2.7em;\\"></span><span class=\\"sizing reset-size6 size3 mtight\\"><span class=\\"mord mtight\\"><span class=\\"mord mathdefault mtight\\">i</span><span class=\\"mord mathdefault mtight\\" style=\\"margin-right:0.03588em;\\">π</span></span></span></span></span></span></span></span></span><span class=\\"mspace\\" style=\\"margin-right:0.2777777777777778em;\\"></span><span class=\\"mrel\\">=</span><span class=\\"mspace\\" style=\\"margin-right:0.2777777777777778em;\\"></span></span><span class=\\"base\\"><span class=\\"strut\\" style=\\"height:0.72777em;vertical-align:-0.08333em;\\"></span><span class=\\"mord\\">−</span><span class=\\"mord\\">1</span></span></span></span></span>",
      "value": "e^{i\\\\pi} = -1",
    },
    "type": "block_equation",
  },
]
`;

exports[`fromPandoc transforms Math (mathType=InlineMath) into an equation 1`] = `
Array [
  Object {
    "attrs": Object {
      "html": "<span class=\\"katex\\"><span class=\\"katex-mathml\\"><math xmlns=\\"http://www.w3.org/1998/Math/MathML\\"><semantics><mrow><msup><mi>e</mi><mrow><mi>i</mi><mi>π</mi></mrow></msup><mo>=</mo><mo>−</mo><mn>1</mn></mrow><annotation encoding=\\"application/x-tex\\">e^{i\\\\pi} = -1</annotation></semantics></math></span><span class=\\"katex-html\\" aria-hidden=\\"true\\"><span class=\\"base\\"><span class=\\"strut\\" style=\\"height:0.824664em;vertical-align:0em;\\"></span><span class=\\"mord\\"><span class=\\"mord mathdefault\\">e</span><span class=\\"msupsub\\"><span class=\\"vlist-t\\"><span class=\\"vlist-r\\"><span class=\\"vlist\\" style=\\"height:0.824664em;\\"><span style=\\"top:-3.063em;margin-right:0.05em;\\"><span class=\\"pstrut\\" style=\\"height:2.7em;\\"></span><span class=\\"sizing reset-size6 size3 mtight\\"><span class=\\"mord mtight\\"><span class=\\"mord mathdefault mtight\\">i</span><span class=\\"mord mathdefault mtight\\" style=\\"margin-right:0.03588em;\\">π</span></span></span></span></span></span></span></span></span><span class=\\"mspace\\" style=\\"margin-right:0.2777777777777778em;\\"></span><span class=\\"mrel\\">=</span><span class=\\"mspace\\" style=\\"margin-right:0.2777777777777778em;\\"></span></span><span class=\\"base\\"><span class=\\"strut\\" style=\\"height:0.72777em;vertical-align:-0.08333em;\\"></span><span class=\\"mord\\">−</span><span class=\\"mord\\">1</span></span></span></span>",
      "value": "e^{i\\\\pi} = -1",
    },
    "type": "equation",
  },
]
`;

exports[`fromPandoc transforms Quoted elements correctly 1`] = `
Array [
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "Quoted nodes are a",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "'",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "good idea",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "'",
    "type": "text",
  },
  Object {
    "marks": Array [
      Object {
        "type": "em",
      },
    ],
    "text": "!!!",
    "type": "text",
  },
]
`;

exports[`fromPandoc transforms a DefinitionList into a bullet_list 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "marks": Array [
                  Object {
                    "type": "strong",
                  },
                ],
                "text": "A term: ",
                "type": "text",
              },
              Object {
                "text": "Definition One",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
          Object {
            "content": Array [
              Object {
                "text": "Paragraph B",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Inside Blockquote",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "blockquote",
          },
          Object {
            "content": Array [
              Object {
                "text": "Paragraph D",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list_item",
      },
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "marks": Array [
                  Object {
                    "type": "strong",
                  },
                ],
                "text": "Mercifully: ",
                "type": "text",
              },
              Object {
                "text": "simple.",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list_item",
      },
    ],
    "type": "bullet_list",
  },
]
`;

exports[`fromPandoc transforms a Table 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Apple",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_header",
          },
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Rating",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_header",
          },
        ],
        "type": "table_row",
      },
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "RedDelicious",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Terrible",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
        ],
        "type": "table_row",
      },
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "GrannySmith",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Bad",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
        ],
        "type": "table_row",
      },
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Jazz",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "PrettyGood",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
        ],
        "type": "table_row",
      },
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Honeycrisp",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
          Object {
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Perfect",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "table_cell",
          },
        ],
        "type": "table_row",
      },
    ],
    "type": "table",
  },
  Object {
    "content": Array [
      Object {
        "text": "Caption!",
        "type": "text",
      },
    ],
    "type": "paragraph",
  },
]
`;
